[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Screens/game_logo.png" type="Texture" id=1]
[ext_resource path="res://UI/Screens/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Fonts/Charybdis.tres" type="DynamicFont" id=3]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.137255, 0.137255, 0.137255, 1 )
polygon = PoolVector2Array( -31, -22, 660, -25, 660, 380, -41, 388 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 640.0
margin_bottom = 240.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 180.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 244.0
margin_right = 640.0
margin_bottom = 300.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 340.0
margin_bottom = 56.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="LangButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
text = "LANG"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 40.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "BACK"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LangButton" to="." method="_on_LangButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
